package Model.Pieces;

public class Empty extends MovablePiece {

    public Empty() {
        super(-2, "Empty", "None", "./src/Model/images/empty.png");    
        this.setImageUrlHide("./src/Model/images/empty.png");    
    }
    
}
