@startuml

title __PIECES's Class Diagram__\n

  namespace Model.Pieces {
    class Model.Pieces.Empty {
        + Empty()
    }
  }
  

  namespace Model.Pieces {
    abstract class Model.Pieces.ImmovablePiece {
        + ImmovablePiece()
    }
  }
  

  namespace Model.Pieces {
    abstract class Model.Pieces.MovablePiece {
        + MovablePiece()
        + capture()
        + move()
    }
  }
  

  namespace Model.Pieces {
    abstract class Model.Pieces.Piece {
        - imageUrlHide : ImageIcon
        - imageUrlShow : ImageIcon
        - isCaptured : boolean
        - movable : boolean
        - name : String
        - rank : int
        - type : String
        + Piece()
        + getImageUrlHide()
        + getImageUrlShow()
        + getIsCaptured()
        + getMovable()
        + getName()
        + getRank()
        + getType()
        + setImageUrlHide()
        + setImageUrlShow()
        + setIsCaptured()
        + setMovable()
        + setName()
        + setRank()
        + setType()
    }
  }
  

  Model.Pieces.Empty -up-|> Model.Pieces.MovablePiece
  Model.Pieces.ImmovablePiece -up-|> Model.Pieces.Piece
  Model.Pieces.MovablePiece -up-|> Model.Pieces.Piece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
